--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "piller",
   "version": "0.0.0",
   "main": "connectiony.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
 
   "dependencies": {
     "bcrypt": "^0.8.6",
