--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "connectiony.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node connectiony.js"
   },
 
   "dependencies": {
